--- a/quantik/website/index.html
+++ b/quantik/website/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" rel="stylesheet" media="all">
     
     <script src="js/jquery-1.11.0.js" media="all"></script>
-    <script src="js/hexapawn.js" media="all"></script>
+    <script src="js/quantik.js" media="all"></script>
     <script src="js/canvas.js" media="all"></script>
     <script src="js/game.js" media="all"></script>
     <script src="js/enums.js" media="all"></script>
@@ -76,7 +76,7 @@
         <h3 id="gameinfo"></h3>
 
         <div class="board">
-            <canvas height="360" width="360" id="myCanvas" style="background: url('./images/2x2.png');  border: 4px solid #d3d3d3;">
+            <canvas height="405" width="630" id="myCanvas" style="background: url('./images/2x2.png');  border: 4px solid #d3d3d3;">
                 Your browser does not support the HTML5 canvas tag.
             </canvas>
         </div>
