--- a/quantik/website/index.html
+++ b/quantik/website/index.html
@@ -76,7 +76,7 @@
         <h3 id="gameinfo"></h3>
 
         <div class="board">
-            <canvas height="405" width="630" id="myCanvas" style="background: url('./images/2x2.png');  border: 4px solid #d3d3d3;">
+            <canvas height="405" width="630" id="myCanvas" style="background-color: #cdc0b4; border: 4px solid #d3d3d3;">
                 Your browser does not support the HTML5 canvas tag.
             </canvas>
         </div>
