--- a/quantik/website/index.html
+++ b/quantik/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Quantik</title>
@@ -7,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
     <link href="css/normalize.css" rel="stylesheet" media="all">
     <link href="css/style.css" rel="stylesheet" media="all">
-    
+
     <script src="js/jquery-1.11.0.js" media="all"></script>
     <script src="js/quantik.js" media="all"></script>
     <script src="js/canvas.js" media="all"></script>
@@ -17,6 +18,7 @@
     <script src="js/storage.js" media="all"></script>
     <script src="js/network.js" media="all"></script>
 </head>
+
 <body>
     <noscript>Please activate JavaScript!</noscript>
 
@@ -27,24 +29,32 @@
 
     <div class="about">
         <p>
-            This is a web application to play the game <a href="https://boardgamegeek.com/boardgame/286295/quantik" target="_blank">Quantik</a> 
-            by the publisher <a href="https://en.gigamic.com/" target="_blank">Gigamic</a>. It is an abstract strategy game, where on their 
-            turn a player will place a piece on an empty space of the board, respecting one single rule: They are not allowed to place a shape 
-            in a row, column, or region in which your opponent has a piece of the same shape. The first player to place the fourth different 
-            shape in a row, column, or region wins the game. 
+            This is a web application to play the game <a href="https://boardgamegeek.com/boardgame/286295/quantik"
+                target="_blank">Quantik</a>
+            by the publisher <a href="https://en.gigamic.com/" target="_blank">Gigamic</a>. It is an abstract strategy
+            game, where on their
+            turn a player will place a piece on an empty space of the board, respecting one single rule: They are not
+            allowed to place a shape
+            in a row, column, or region in which your opponent has a piece of the same shape. The first player to place
+            the fourth different
+            shape in a row, column, or region wins the game.
         </p>
         <p>
             This project was developed by Lorenz Killer as a bachelor thesis for computer science,
             supervised by <a href="http://www.ist.tugraz.at/oaich/" target="_blank">Oswin Aichholzer</a>, at <a
                 href="http://www.tugraz.at/" target="_blank">Graz University of Technology</a>.
-            The webapp is based on a <a href="http://ninemensmorris.ist.tugraz.at:8080/" target="_blank">project</a> by Christoph
+            The webapp is based on a <a href="http://ninemensmorris.ist.tugraz.at:8080/" target="_blank">project</a> by
+            Christoph
             Reinisch.
         </p>
         <!-- TODO -->
         <p>
-            The server is written in Java 11, using the <a href="https://spring.io" target="_blank">Spring framework</a>. The client is written in
-            HTML and JavaScript, using <a href="https://jquery.com" target="_blank">jQuery</a>. Compatibility was tested in Chromium and Mozilla
-            Firefox running on Linux, Android and Windows. Nevertheless the application should be compatible with any browser like
+            The server is written in Java 11, using the <a href="https://spring.io" target="_blank">Spring
+                framework</a>. The client is written in
+            HTML and JavaScript, using <a href="https://jquery.com" target="_blank">jQuery</a>. Compatibility was tested
+            in Chromium and Mozilla
+            Firefox running on Linux, Android and Windows. Nevertheless the application should be compatible with any
+            browser like
             Microsoft Internet Explorer.
         </p>
         <h4>Features</h4>
@@ -52,40 +62,49 @@
             <li>Choose the number of rows and columns for the playing field</li>
             <li>Either player (A and B) can be controlled by a human or the computer (AI)</li>
             <li>Choose the level of the AI: &ldquo;Perfect&rdquo; will always make an optimal move (which might not be
-                unique), &ldquo;Just win&rdquo; will randomly choose a winning move (if available, and not necessary optimal),
+                unique), &ldquo;Just win&rdquo; will randomly choose a winning move (if available, and not necessary
+                optimal),
                 &ldquo;Random&rdquo; will randomly pick a move</li>
-            <li>Move info: Optionally display the number of half-moves till the end of the game for the possible moves</li>
+            <li>Move info: Optionally display the number of half-moves till the end of the game for the possible moves
+            </li>
             <li>Recommend move: Shows a perfect move for the current player</li>
             <li>Undo/Redo: Revert or redo the last move made by either player</li>
             <li>Save/Load: Saves the game (in local storage, provided by HTML5) to resume the game later on</li>
         </ul>
         <h4>Basics</h4>
-        <p>The AI of this game is based on an exhaustive evaluation of all possible game positions stored in a large data base.
-            For each possible board its status (current player win, opponent player win) is known, as well as as the maximum number of half
-            moves needed to force a win from this board. A green even number shows in how many further half-moves the game can be won
+        <p>The AI of this game is based on an exhaustive evaluation of all possible game positions stored in a large
+            data base.
+            For each possible board its status (current player win, opponent player win) is known, as well as as the
+            maximum number of half
+            moves needed to force a win from this board. A green even number shows in how many further half-moves the
+            game can be won
             by taking this move (assuming optimal play of the opponent, otherwise you can win faster). A red odd
-            number shows the maximum number of half-moves you can delay the victory of the opponent (again assuming optimal
-            play of the opponent). So an even number shows a winning move, which guarantees a win for the current player (when continuing
-            to play optimal) in at most this number of half-moves. An optimal winning move is a move which guarantees the shortest
+            number shows the maximum number of half-moves you can delay the victory of the opponent (again assuming
+            optimal
+            play of the opponent). So an even number shows a winning move, which guarantees a win for the current player
+            (when continuing
+            to play optimal) in at most this number of half-moves. An optimal winning move is a move which guarantees
+            the shortest
             available sequence of half-moves till the player wins.</p>
         </ul>
     </div>
 
     <div class="wrap">
         <main role="main">
-        <h3 id="gameinfo"></h3>
+            <h3 id="gameinfo"></h3>
 
-        <div class="board">
-            <canvas height="405" width="630" id="myCanvas" style="background-color: #cdc0b4; border: 4px solid #d3d3d3;">
-                Your browser does not support the HTML5 canvas tag.
-            </canvas>
-        </div>
+            <div class="board">
+                <canvas height="405" width="630" id="myCanvas"
+                    style="background-color: #cdc0b4; border: 4px solid #d3d3d3;">
+                    Your browser does not support the HTML5 canvas tag.
+                </canvas>
+            </div>
 
-        <div id="messages">
-            <div id="error"></div>
-            <div id="info"></div>
-        </div>
-        <div id="gamedate"></div>
+            <div id="messages">
+                <div id="error"></div>
+                <div id="info"></div>
+            </div>
+            <div id="gamedate"></div>
         </main>
 
         <aside>
@@ -98,12 +117,15 @@
                     <li><a href="#" id="historyrevert">Undo last move</a></li>
                     <li><a href="#" id="historyredo">Redo last move</a></li>
                     <li><input id="savegameName" style="display: none" value="" size="15" type="text"> <a href="#"
-                        id="savegameStart">Save game &hellip;</a> <a href="#" style="display: none" id="savegameConfirm">Confirm</a> <a
-                        href="#" style="display: none" id="savegameCancel">Cancel</a></li>
+                            id="savegameStart">Save game &hellip;</a> <a href="#" style="display: none"
+                            id="savegameConfirm">Confirm</a> <a href="#" style="display: none"
+                            id="savegameCancel">Cancel</a></li>
                     <li><a href="#" id="loadgame">Load game &hellip;</a>
-                        <ul id="loadgameList" style="display: none"></ul></li>
+                        <ul id="loadgameList" style="display: none"></ul>
+                    </li>
                     <li><a href="#" id="cleargame">Delete game &hellip;</a>
-                        <ul id="cleargameList" style="display: none"></ul></li>
+                        <ul id="cleargameList" style="display: none"></ul>
+                    </li>
                 </ul>
                 <h3>Options</h3>
                 <form>
@@ -113,13 +135,14 @@
                             <option value="perfect">Perfect</option>
                             <option value="justwin">Just win</option>
                             <option value="random">Random</option>
-                    </select></label> <label for="optionsaib"> <input id="optionsaib" name="optionsaib" value="aib" type="checkbox">AI
+                        </select></label> <label for="optionsaib"> <input id="optionsaib" name="optionsaib" value="aib"
+                            type="checkbox">AI
                         for Player B
                     </label> <label for="optionsaiblevel">AI Level B &nbsp;<select id="optionsaiblevel">
                             <option value="perfect">Perfect</option>
                             <option value="justwin">Just win</option>
                             <option value="random">Random</option>
-                    </select></label>
+                        </select></label>
                 </form>
             </nav>
         </aside>
@@ -132,4 +155,5 @@
         </aside>
     </div>
 </body>
+
 </html>
