i dont fucking know!!!!!

--- a/quantik/website/static/index.html
+++ b/quantik/website/static/index.html
@@ -6,17 +6,17 @@
     <title>Quantik</title>
     <meta name="description" content="Play Quantik!">
     <meta name="viewport" content="width=device-width">
-    <link href="css/normalize.css" rel="stylesheet" media="all">
-    <link href="css/style.css" rel="stylesheet" media="all">
+    <link href="/static/css/normalize.css" rel="stylesheet" media="all">
+    <link href="/static/css/style.css" rel="stylesheet" media="all">
 
-    <script src="js/jquery-1.11.0.js" media="all"></script>
-    <script src="js/quantik.js" media="all"></script>
-    <script src="js/canvas.js" media="all"></script>
-    <script src="js/game.js" media="all"></script>
-    <script src="js/enums.js" media="all"></script>
-    <script src="js/output.js" media="all"></script>
-    <script src="js/storage.js" media="all"></script>
-    <script src="js/network.js" media="all"></script>
+    <script src="/static/js/jquery-1.11.0.js" media="all"></script>
+    <script src="/static/js/quantik.js" media="all"></script>
+    <script src="/static/js/canvas.js" media="all"></script>
+    <script src="/static/js/game.js" media="all"></script>
+    <script src="/static/js/enums.js" media="all"></script>
+    <script src="/static/js/output.js" media="all"></script>
+    <script src="/static/js/storage.js" media="all"></script>
+    <script src="/static/js/network.js" media="all"></script>
 </head>
 
 <body>
