--- a/quantik/website/static/index.html
+++ b/quantik/website/static/index.html
@@ -17,6 +17,7 @@
     <script src="/static/js/output.js" media="all"></script>
     <script src="/static/js/storage.js" media="all"></script>
     <script src="/static/js/network.js" media="all"></script>
+    <script src="/static/js/canonical.js" media="all"></script>
 </head>
 
 <body>
