--- a/quantik/website/static/index.html
+++ b/quantik/website/static/index.html
@@ -36,9 +36,9 @@
             game, where on their
             turn each player will place a piece on an empty space of the board, respecting one single rule: They are not
             allowed to place a shape
-            in a row, column, or region in which your opponent has a piece of the same shape. The first player to place
+            in a row, column, or quadrant in which their opponent has a piece of the same shape. The first player to place
             the fourth different
-            shape in a row, column, or region wins the game.
+            shape in a row, column, or quadrant wins the game.
         </p>
         <p>
             This project was developed by Lorenz Killer as a bachelor thesis for computer science,
